--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2026-02-08  GovPay Team <govpay@link.it>
+
+	* Rilasciata versione 1.0.0
+
+	* [Build]
+	Correzione
+	Corretta pipeline GitHub Actions per la pubblicazione degli snapshot:
+	- Utilizzato maven-deploy-plugin standard al posto di central-publishing-maven-plugin
+	- Rimossa firma GPG non necessaria per gli snapshot
+	- Aggiunto step di verifica esistenza secrets prima del deploy
+	- Corretta configurazione credenziali Sonatype (vars/secrets)
+
 2025-12-29  GovPay Team <govpay@link.it>
 
 	* [Build]
