--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2026-02-11  GovPay Team <govpay@link.it>
+
+	* Avanzamento versione 1.1.1-SNAPSHOT
+
+	* [BOM]
+	Aggiunta funzionalità
+	Aggiunte nuove dipendenze:
+	- hibernate-jpamodelgen (versione allineata a hibernate.version)
+	- jackson-databind-nullable 0.2.6
+	- swagger-annotations 2.2.20
+
 2026-02-10  GovPay Team <govpay@link.it>
 
 	* Rilasciata versione 1.1.0
