--- a/ChangeLog
+++ b/ChangeLog
@@ -7,8 +7,14 @@
 	Aggiunte nuove dipendenze:
 	- hibernate-jpamodelgen (versione allineata a hibernate.version)
 	- jackson-databind-nullable 0.2.6
-	- swagger-annotations 2.2.20
+	- swagger-annotations v1 (io.swagger) 1.6.2
+	- swagger-annotations v3 (io.swagger.core.v3) 2.2.20
 	- jaxb2-maven-plugin 4.1.0
+
+	* [BOM]
+	Correzione
+	Rinominata property swagger-annotations.version in swagger-v1.version e swagger-v3.version
+	per evitare collisione tra io.swagger (v1) e io.swagger.core.v3 (v3).
 
 2026-02-10  GovPay Team <govpay@link.it>
 
